test/bad/classes/constructor06.px

class Test def
    Int x

    constructor(Int x) def
        skip

Test()
